<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <RelativeLayout android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView android:layout_width="300dp"
                android:layout_height="100dp"
                android:src="@drawable/plasma_logo"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:textSize="16sp"
            android:id="@+id/login_button"
            android:background="@drawable/white_rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/login"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/blue"
            android:gravity="center"
            android:id="@+id/link_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/no_account_yet_create_one"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"/>
    <TextView
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:layout_below="@+id/loginProgressBar"/>
</RelativeLayout>
